--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -8,16 +8,13 @@
   Passengers:
   <%= f.select(:passengers, 1..4) %>
 
-  <%#Date:
-  <%= f.collection_select :date, Flight.select(:date).distinct, :id, :date %>
-
   Date:
   <%= f.select(:date, options_from_collection_for_select(Flight.select(:date).order(:date).distinct, :date, :flight_date_formatted)) %>
 
   <%= f.submit "Find a flight" %>
 <% end %>
 
-<% if @chosen_flight %>
+<% unless @chosen_flight.empty? %>
   <% @chosen_flight.each do |f| %>
     <%= f.departing_id %>
     <%= f.arriving_id %>
