--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :flight, method: :get do |f| %>
+<%= form_tag :flight, method: :get do |f| %>
   Departing: 
   <%= f.collection_select :departing_id, Airport.all, :id, :code %>
   
