--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= yield %>
 
-<%= yield %>
-
+  <% flash.each do |message_type, message| %>
+    <div class="alert-<%= message_type %>">
+      <%= message %>
+    </div>
+  <% end %>
 </body>
 </html>
