--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>RailsFlightTracker</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <% flash.each do |message_type, message| %>
-    <div class="alert-<%= message_type %>">
-      <%= message %>
+
+  <head>
+    <title>RailsFlightTracker</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+
+          <div class="col-sm-12">
+            <h1>Flight Tracker</h1>
+          </div>
+        
+          <div class="col-sm-12">
+            <% flash.each do |message_type, message| %>
+              <div class="alert-<%= message_type %>">
+                <%= message %>
+              </div>
+            <% end %>
+          </div>
+        
+          <div class="col-sm-12">
+            <%= yield %>
+          </div>
+        
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <%= yield %>
-
-</body>
+  </body>
+  
 </html>
