--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Flights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.btn {
+  margin-top: 20px;
+}
