--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,37 +1,69 @@
-<%= form_tag('/flights', method: :get) do %>
-  Departing: 
-  <%= collection_select :flight, :departing_id, Airport.all, :id, :code %>
-  
-  Destination:
-  <%= collection_select :flight, :arriving_id, Airport.all, :id, :code %>
+<%= form_tag('/flights', method: 'get', class: "form-horizontal" ) do %>
+  <div class="form-group row">
+    <label for="origin" class="col-sm-2 col-form-label">
+      Origin:
+    </label>
+    <div class="col-sm-10">
+      <%= collection_select :flight, :departing_id, Airport.all, :id, :code,{},
+      { type: 'text', class: "form-control"} %>
+    </div>
+  </div>
 
-  Passengers:
-  <%= select :flight, :passengers, (1..4) %>
+  <div class="form-group row">
+    <label for="destination" class="col-sm-2 col-form-label">
+      Destination:
+    </label> 
+    <div class="col-sm-10">
+      <%= collection_select :flight, :arriving_id, Airport.all, :id, :code, {}, { type: 'text', class: "form-control"} %>
+    </div>
+  </div>
 
-  Date:
-  <%= collection_select :flight, :date, Flight.distinct_dates, :date, :flight_date_formatted %>
+  <div class="form-group row">
+    <label for="passengers" class="col-sm-2">
+      Passengers:
+    </label>
+    <div class="col-sm-10">
+      <%= select :flight, :passengers, (1..5), {}, { class: "form-control" } %>
+    </div>
+  </div>
 
-  <%= submit_tag "Find a flight" %>
+  <div class="form-group row">
+    <label for="date" class="col-sm-2">
+      Date:
+    </label>
+    <div class="col-sm-10">
+      <%= collection_select :flight, :date, Flight.distinct_dates, :date, :flight_date_formatted, {}, { type: 'date', class: 'form-control' } %>
+    <div>
+  </div>
+
+  <fieldset <%= "disabled" unless @flights.blank? %> >
+    <div class="form-group row">
+      <div class='col-sm-12'>
+        <%= submit_tag "Find a flight", 
+          { type: "submit",
+            class: "btn btn-primary btn-block" } %>
+      </div>
+    </div>
+  </fieldset>
 <% end %>
 
-<% if @flights %>
-  <% @flights.each do |flight| %>
-    <p>
-      <%= flight.departing_id %>
-      <%= flight.arriving_id %>
-      <%= flight.date.to_s %>
-    </p>
-  <% end %>
-<% end %>
-
-<% unless @flights.nil? || @flights.empty? %>
+<% unless @flights.blank? %>
   <%= form_tag('bookings/new', method: :get) do %>
     <%= hidden_field_tag(:passengers, params[:flight][:passengers]) %>
-    <%= collection_radio_buttons(:booking, :flight_id, @flights, :id, :date) do |b| %>
-      <%= b.radio_button %>
-      <%= b.object.duration %>
-      <%= b.object.date %>
-    <% end %>
-    <%= submit_tag "Accept this flight" %>
+    <h3>Choose a flight</h3>
+    <div class="form-check-label">
+      <%= collection_radio_buttons(:booking, :flight_id, @flights, :id, :date) do |b| %>
+        <%= b.radio_button %>
+        <%= b.object.flight_date_formatted %> at 
+        <%= b.object.flight_time_formatted %>
+      <% end %>
+    </div>
+    <div class="form-group row">
+      <div class='col-sm-12'>
+        <%= submit_tag "Accept", 
+          { type: "submit",
+            class: "btn btn-primary btn-block" } %>
+      </div>
+    </div>
   <% end %>
 <% end %>
