--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,27 +11,23 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-sm-10 col-sm-offset-1">
-
-          <div class="col-sm-12">
-            <h1>Flight Tracker</h1>
-          </div>
+        <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
+          <h1 id='title'>Flight Tracker</h1>
+          <% flash.each do |message_type, message| %>
+            <div class="alert alert-<%= message_type %> alert-dismissible">
+              <button type='button' class='close fade' data-dismiss='alert'>
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
         
-          <div class="col-sm-12">
-            <% flash.each do |message_type, message| %>
-              <div class="alert-<%= message_type %>">
-                <%= message %>
-              </div>
-            <% end %>
-          </div>
-        
-          <div class="col-sm-12">
-            <%= yield %>
-          </div>
-        
+        <div class="col-xs-8 col-sm-8 col-xs-offset-2 col-sm-offset-2">
+          <%= yield %>
         </div>
       </div>
     </div>
   </body>
-  
+
 </html>
