--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
       <div class="row">
         <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
           <h1 id='title'>Flight Tracker</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
           <% flash.each do |message_type, message| %>
             <div class="alert alert-<%= message_type %> alert-dismissible">
               <button type='button' class='close fade' data-dismiss='alert'>
@@ -22,7 +26,8 @@
             </div>
           <% end %>
         </div>
-        
+      </div>
+      <div class="row">
         <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
           <%= yield %>
         </div>
