--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,102 +1,110 @@
 <div class="row">
-  <%= form_tag('/flights', method: 'get', class: "form-horizontal" ) do %>
-    <div class="form-group row">
-      <label for="origin" class="col-xs-4 col-form-label">
-        Origin:
-      </label>
-      <div class="col-xs-8">
-        <%= collection_select :flight, :departing_id, Airport.all, :id, :code,{},
-        { type: 'text', class: "form-control"} %>
+  <div class="col-xs-12">
+    <%= form_tag('/flights', method: 'get', class: "form-horizontal" ) do %>
+      <div class="form-group row">
+        <label for="origin" class="col-xs-4 col-form-label">
+          Origin:
+        </label>
+        <div class="col-xs-8">
+          <%= collection_select :flight, :departing_id, Airport.all, :id, :code,{},
+          { type: 'text', class: "form-control"} %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <label for="destination" class="col-xs-4 col-form-label">
-        Destination:
-      </label> 
-      <div class="col-xs-8">
-        <%= collection_select :flight, :arriving_id, Airport.all, :id, :code, {}, { type: 'text', class: "form-control"} %>
+      <div class="form-group row">
+        <label for="destination" class="col-xs-4 col-form-label">
+          Destination:
+        </label> 
+        <div class="col-xs-8">
+          <%= collection_select :flight, :arriving_id, Airport.all, :id, :code, {}, { type: 'text', class: "form-control"} %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <label for="passengers" class="col-xs-4">
-        Passengers:
-      </label>
-      <div class="col-xs-8">
-        <%= select :flight, :passengers, (1..5), {}, { class: "form-control" } %>
+      <div class="form-group row">
+        <label for="passengers" class="col-xs-4">
+          Passengers:
+        </label>
+        <div class="col-xs-8">
+          <%= select :flight, :passengers, (1..5), {}, { class: "form-control" } %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <label for="date" class="col-xs-4">
-        Date:
-      </label>
-      <div class="col-xs-8">
-        <%= collection_select :flight, :date, Flight.distinct_dates, :date, :date_formatted, {}, { type: 'date', class: 'form-control' } %>
+      <div class="form-group row">
+        <label for="date" class="col-xs-4">
+          Date:
+        </label>
+        <div class="col-xs-8">
+          <%= collection_select :flight, :date, Flight.distinct_dates, :date, :date_formatted, {}, { type: 'date', class: 'form-control' } %>
+        </div>
       </div>
-    </div>
-    
-    <div class="form-group-row">
-      <%= submit_tag "Find a flight", 
-        { type: "submit",
-          class: "btn btn-primary btn-block" } %>
-    </div>
-  <% end %>
-</div>
-
-<% unless @flights.blank? %>
-  <hr></hr>
-  <div class="row">
-    <div id="main-flight-info">
-      <h2>
-        <%= @departing_air.code %> 
-        <span class="glyphicon glyphicon-chevron-right"></span> 
-        <%= @arriving_air.code %>
-      </h2>
-      <h4><%= @flights.first.date_formatted %></h4>
-    </div>
-  </div>
-
-  <div class="row">
-    <%= form_tag('bookings/new', method: :get) do %>
-      <%= hidden_field_tag(:passengers, params[:flight][:passengers]) %>
+      
       <div class="form-group-row">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Departing</th>
-              <th>Arriving</th>
-              <th>Duration</th> 
-            </tr>
-          </thead>
-          <tbody>
-            <div class="form-check-label">
-              <%= collection_radio_buttons(:booking, :flight_id, @flights, :id, :date) do |b| %>
-                <trow>
-                  <td><%= b.radio_button %></td>
-                  <td><%= b.object.time_formatted %></td>
-                  <td><%= b.object.arriving_formatted %></td>
-                  <td><%= b.object.duration_formatted %></td>
-                </trow>
-              <% end %>
-            </div>
-          </tboby>
-        </table>
-      </div>
-      <div class="form-group-row">
-        <%= submit_tag "Accept", 
+        <%= submit_tag "Find a flight", 
           { type: "submit",
             class: "btn btn-primary btn-block" } %>
       </div>
     <% end %>
   </div>
+</div>
+
+<% unless @flights.blank? %>
+  <div class="row">
+    <div class="col-xs-12">
+    <hr></hr>
+      <div id="main-flight-info">
+        <h2>
+          <%= @departing_air.code %> 
+          <span class="glyphicon glyphicon-chevron-right"></span> 
+          <%= @arriving_air.code %>
+        </h2>
+        <h4><%= @flights.first.date_formatted %></h4>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
-    <div class="form-group-row">
-      <%= link_to "Clear all", { controller: 'flights', action: 'index' }, 
-        class: "btn btn-warning btn-block" %>
+    <div class="col-xs-12">
+      <%= form_tag('bookings/new', method: :get) do %>
+        <%= hidden_field_tag(:passengers, params[:flight][:passengers]) %>
+        <div class="form-group-row">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Departing</th>
+                <th>Arriving</th>
+                <th>Duration</th> 
+              </tr>
+            </thead>
+            <tbody>
+              <div class="form-check-label">
+                <%= collection_radio_buttons(:booking, :flight_id, @flights, :id, :date, { checked: @flights.first.id }) do |b| %>
+                  <trow>
+                    <td><%= b.radio_button %></td>
+                    <td><%= b.object.time_formatted %></td>
+                    <td><%= b.object.arriving_formatted %></td>
+                    <td><%= b.object.duration_formatted %></td>
+                  </trow>
+                <% end %>
+              </div>
+            </tboby>
+          </table>
+        </div>
+        <div class="form-group-row">
+          <%= submit_tag "Accept", 
+            { type: "submit",
+              class: "btn btn-primary btn-block" } %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="form-group-row">
+        <%= link_to "Clear all", { controller: 'flights', action: 'index' }, 
+          class: "btn btn-warning btn-block" %>
+      </div>
     </div>
   </div> 
 <% end %>
