--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
+        <div class="col">
           <h1 id='title'>Flight Tracker</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
+        <div class="col-xs-12">
           <% flash.each do |message_type, message| %>
             <div class="alert alert-<%= message_type %> alert-dismissible">
               <button type='button' class='close fade' data-dismiss='alert'>
@@ -27,12 +27,10 @@
           <% end %>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
-          <%= yield %>
-        </div>
-      </div>
+    </div>
+
+    <div class="container">
+      <%= yield %>
     </div>
   </body>
-
 </html>
