--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col">
           <h1 id='title'>Flight Tracker</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-10 col-xs-offset-1">
           <% flash.each do |message_type, message| %>
             <div class="alert alert-<%= message_type %> alert-dismissible">
               <button type='button' class='close fade' data-dismiss='alert'>
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
       <%= yield %>
     </div>
   </body>
