--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,9 +2,9 @@
   <div class="col-xs-10 col-xs-offset-1">
     <div id="main-flight-info">
       <h2>
-        <%= @departing_air.code %> 
+        <%= @airports[:departing].code %> 
         <span class="glyphicon glyphicon-chevron-right"></span> 
-        <%= @arriving_air.code %>
+        <%= @airports[:arriving].code %>
       </h2>
       <h4>Flight #<%= @flight.id %> on <%= @flight.date_formatted %></h4>
     </div>
