--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,19 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <h1 id='title'>Flight Tracker</h1>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <%= link_to "Flight Tracker", root_path, class: "navbar-brand" %>
         </div>
       </div>
+    </nav>
+
+    <div class="container-fluid">
       <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
           <% flash.each do |message_type, message| %>
