Add opaque backgrounds to divs

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,3 +5,23 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+#finder {
+  padding-top: 20px;
+  background-color: rgba(255,255,255,0.7);
+}
+
+#flight-info {
+  // margin-top: 20px;
+  background-color: rgba(255,255,255,0.7);
+}
+
+#results {
+  padding-top: 20px;
+  background-color: rgba(255,255,255,0.7);
+}
+
+#booking {
+  padding-top: 20px;
+  background-color: rgba(255,255,255,0.7);
+}
