--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -4,7 +4,7 @@
 
 #passenger-info {
   margin-bottom: 10px;
-  background-color: lightblue;
+  // background-color: lightblue;
 }
 
 #confirmation {
