--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,6 +22,84 @@ body {
 }
 
 #booking {
-  padding-top: 20px;
+  // padding-top: 20px;
   background-color: rgba(255,255,255,0.7);
+}
+
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+
+
+// Styling for tables on screens smaller than 760px
+
+@media 
+only screen and (max-width: 320px) {
+//   table, th {
+//     font-size: 0.75em;
+//   }
+
+//   tbody {
+//     padding: 1px;
+//   }
+// }
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+    top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { 
+    border: 1px solid #ccc;
+  }
+
+	tr:nth-of-type(odd) { 
+  	background: #eee; 
+	}
+	
+	tr#mini > td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+
+	tr#extra {
+		display: none;
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 5px;
+		left: 5px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+		font-weight: bold;
+	}
+	
+	// /*
+	// Label the data
+	// */
+	td:nth-of-type(1):before { content: ""; }
+	td:nth-of-type(2):before { content: "Flight #"; }
+	td:nth-of-type(3):before { content: "Depart"; }
+	td:nth-of-type(4):before { content: "Arrive"; }
+	td:nth-of-type(5):before { content: "Duration"; }
+
+	// table#booking > td:nth-of-type(1):before { content: "Flight #"; }
+	// table#booking > td:nth-of-type(2):before { content: "Depart"; }
+	// table#booking > td:nth-of-type(3):before { content: "Arrive"; }
+	// table#booking > td:nth-of-type(4):before { content: "Duration"; }	
 }
