--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -14,9 +14,9 @@
 -->
 
 <div class="row">
-  <div class="col-xs-10 col-xs-offset-1">
+  <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
     <div id="confirmation" class="jumbotron">
-      <h2>Congratulations!</h2>
+      <h2>Congratulations</h2>
         <p>Your flight has succesfully been booked. Please check your email for further details.</p>
         <p>
           <%= link_to(
