--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-10 col-xs-offset-1">
+        <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
           <% flash.each do |message_type, message| %>
             <div class="alert alert-<%= message_type %> alert-dismissible">
               <button type='button' class='close fade' data-dismiss='alert'>
